Updated project to allow for headless integration testing.

--- a/build.properties
+++ b/build.properties
@@ -16,6 +16,9 @@ warfilename = card_trainer.war
 # Path to your project's Java sources
 sources = src
 
+# Path to your project's JUnit tests
+tests = test
+
 # Directory containing files to be placed in WAR as-is.
 webroot = WebContent
 
@@ -33,3 +36,6 @@ compile.debug = on
 
 # Fail the widgetset compilation if shared classes are not serializable (see http://dev.vaadin.com/ticket/8711)
 failifnotserializable = true
+
+# Where the JUnit report will be placed
+junit.output.dir = junit 
