--- a/ivy.xml
+++ b/ivy.xml
@@ -43,5 +43,10 @@
 		<!-- Compiler for custom widget sets. Should not be deployed -->
 		<dependency org="com.vaadin" name="vaadin-client-compiler"
 			rev="&vaadin.version;" conf="widgetset-compile->default" />
+			
+		<!-- Jetty for integration testing -->
+		<dependency org="org.eclipse.jetty" name="jetty-server" rev="9.2.7.v20150116" conf="nodeploy->default" />
+		<dependency org="org.eclipse.jetty" name="jetty-ant" rev="9.2.7.v20150116" conf="nodeploy->default" />
+		
 	</dependencies>
 </ivy-module>
